# invenio

./: .bowerrc  .cvsignore  .drone.yml  .editorconfig  .git-blame-ignore-revs  .gitignore  .inveniorc  .kwalitee.yml  .lgtm  .readthedocs.yaml  .travis-devel-requirements.txt  .travis.yml  .wmlrc  ABOUT-NLS  AUTHORS  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  CREDITS  ChangeLog  Dockerfile  Gruntfile.js  INSTALL  INSTALL.rst  Jenkinsfile  LICENSE  MAINTAINERS  MANIFEST.in  Makefile.am  NEWS  Procfile  Procfile-elasticsearch  README  README.rst  RELEASE-NOTES  RELEASE-NOTES.rst  SECURITY.md  THANKS  TODO  UNINSTALL  (+39 more)
modules/bibauthorid/lib/: Makefile.am  author-handlebars-templates.js  bibauthorid.js  bibauthorid.py  bibauthorid_affiliations.py  bibauthorid_affiliations_regression_tests.py  bibauthorid_authorname_utils.py  bibauthorid_backinterface.py  bibauthorid_bib_matrix.py  bibauthorid_bib_matrix_unit_tests.py  bibauthorid_cli.py  bibauthorid_cluster_set.py  bibauthorid_cluster_set_unit_tests.py  bibauthorid_comparison.py  bibauthorid_config.py  bibauthorid_daemon.py  bibauthorid_dbinterface.py  bibauthorid_dbinterface_old.py  bibauthorid_dbinterface_regression_tests.py  bibauthorid_dbinterface_unit_tests.py  bibauthorid_file_utils.py  bibauthorid_frontinterface.py  bibauthorid_general_functions.py  bibauthorid_general_utils.py  bibauthorid_hoover.py  bibauthorid_hoover_exceptions.py  bibauthorid_hoover_regression_tests.py  bibauthorid_least_squares.py  bibauthorid_logutils.py  bibauthorid_matrix_optimization.py  bibauthorid_meld_edges.pyx  bibauthorid_merge.py  bibauthorid_merge_regression_tests.py  bibauthorid_model.py  bibauthorid_name_utils.py  bibauthorid_name_utils_unit_tests.py  bibauthorid_personid_maintenance.py  bibauthorid_personid_tables_utils.py  bibauthorid_prob_matrix.py  bibauthorid_prob_matrix_unit_tests.py  (+24 more)
modules/bibauthorid/web/: Makefile.am  bai-help-filelist.xml  bai-help.html  bibauthorid-help.html  bibauthorid.css  bootstrap.min.css
modules/bibauthority/doc/: Makefile.am
modules/bibcirculation/lib/: Makefile.am  bibcirculation.py  bibcirculation_cern_ldap.py  bibcirculation_config.py  bibcirculation_daemon.py  bibcirculation_dblayer.py  bibcirculation_fixtures_demosite.py  bibcirculation_model.py  bibcirculation_receivers.py  bibcirculation_regression_tests.py  bibcirculation_templates.py  bibcirculation_utils.py  bibcirculation_web_tests.py  bibcirculation_webinterface.py  bibcirculationadmin_webinterface.py  bibcirculationadminlib.py
modules/bibclassify/lib/: Makefile.am  bibclassify_acronym_analyzer.py  bibclassify_cli.py  bibclassify_config.py  bibclassify_daemon.py  bibclassify_engine.py  bibclassify_fixtures_demosite.py  bibclassify_keyword_analyser.py  bibclassify_keyword_analyzer.py  bibclassify_microtests.py  bibclassify_model.py  bibclassify_ontology_reader.py  bibclassify_regression_tests.py  bibclassify_templates.py  bibclassify_tests.py  bibclassify_text_extractor.py  bibclassify_text_normalizer.py  bibclassify_unit_tests.py  bibclassify_utils.py  bibclassify_webinterface.py  bibclassifylib.py
modules/bibconvert/etc/: Makefile.am  authorlist2marcxml.xsl  bibtex2marcxml.cfg  countrycode-to-country.kb  crossref2marcxml.xsl  entdec-to-utf8.kb  latex-to-unicode.kb  oaiarxiv2marcxml.xsl  oaidc2marcxml.bfx  oaidc2marcxml.xsl  oaimarc2marcxml.xsl
modules/bibdocfile/lib/: Makefile.am  bibdocfile.py  bibdocfile_config.py  bibdocfile_managedocfiles.py  bibdocfile_model.py  bibdocfile_regression_tests.py  bibdocfile_templates.py  bibdocfile_web_tests.py  bibdocfile_webinterface.py  bibdocfilecli.py  bom_textdoc.py  fulltext_files_migration_kit.py  icon_migration_kit.py
modules/bibedit/etc/: MARC21slim.dtd  Makefile.am  field_FFT.xml  firstauthor.xml  poem.xml  reference.xml  refextract-job-preprints.cfg  refextract-journal-titles.kb  refextract-report-numbers.kb
modules/bibedit/lib/: Makefile.am  bibedit.css  bibedit_cachetool.py  bibedit_clipboard.js  bibedit_config.py  bibedit_dblayer.py  bibedit_display.js  bibedit_engine.js  bibedit_engine.py  bibedit_engine_unit_tests.conf  bibedit_holdingpen.js  bibedit_keys.js  bibedit_menu.js  bibedit_model.py  bibedit_refextract.js  bibedit_regression_tests.py  bibedit_templates.py  bibedit_tests.py  bibedit_unit_tests.py  bibedit_utils.py  bibedit_web_tests.py  bibedit_webinterface.py  bibeditadminlib.py  bibeditcli.py  bibeditmulti.js  bibeditmulti_engine.py  bibeditmulti_templates.py  bibeditmulti_webinterface.py  bibeditold_dblayer.py  bibeditold_engine.py  bibeditold_templates.py  bibeditold_utils.py  bibrecord.py  bibrecord.py.wml  bibrecord_config.py  bibrecord_config.py.wml  bibrecord_tests.py  bibrecord_tests.py.wml  marcxml.js  refextract.py  (+10 more)
modules/bibencode/etc/: Makefile.am
modules/bibfield/lib/: Makefile.am  bibfield.py  bibfield_config_engine.py  bibfield_config_engine_unit_tests.py  bibfield_jsonreader.py  bibfield_manager.py  bibfield_marcreader.py  bibfield_marcreader_regression_tests.py  bibfield_marcreader_unit_tests.py  bibfield_reader.py  bibfield_regression_tests.py  bibfield_utils.py  bibfield_utils_unit_tests.py
modules/bibformat/lib/: Makefile.am  bibformat.py  bibformat_bfx_engine.py  bibformat_bfx_engine_config.py  bibformat_config.py  bibformat_dblayer.py  bibformat_engine.py  bibformat_engine_tests.py  bibformat_engine_unit_tests.py  bibformat_manager.py  bibformat_migration_kit.py  bibformat_migration_kit_assistant_lib.py  bibformat_migration_kit_dblayer.py  bibformat_migration_kit_templates.py  bibformat_regression_tests.py  bibformat_templates.py  bibformat_utils.py  bibformat_utils_unit_tests.py  bibformat_web_tests.py  bibformat_xslt_engine.py  bibformatadmin_regression_tests.py  bibformatadminlib.py  bibreformat.py
modules/bibharvest/lib/: Makefile.am  bibharvest.py  bibharvest_dblayer.py  bibharvest_templates.py  bibharvest_web_tests.py  bibharvestadmin_regression_tests.py  bibharvestadminlib.py  oai_harvest_admin.py  oai_harvest_admin_regression_tests.py  oai_harvest_config.py  oai_harvest_daemon.py  oai_harvest_dblayer.py  oai_harvest_getter.py  (+16 more)
(+6597 files in other folders)
